# Squel

./: .gdbhelpers  .gdbinit  CMakeLists.txt  Makefile  README.md  TODO  arena.cpp  arena.h  arenaOLD.h  arena_aliases.h  clang.pro  environment.cpp  environment.cppm  environment.h  evaluator.cpp  evaluator.cppm  evaluator.h  execute.cpp  execute.cppm  execute.h  gcc.pro  helpers.cpp  helpers.h  ideas.txt  lexer.cpp  lexer.cppm  lexer.h  lexer_test  lexer_test.cpp  main.cpp  main.pro  myApp  node.cpp  node.cppm  node.h  object.cpp  object.cppm  object.h  output.txt  parser.cpp  (+19 more)
Allocators/: allocator_aliases.h  allocator_string.h  allocator_structs.h  allocators.h  stack.h
Arena/: arena.h  arena_aliases.h  arena_string.h
QT TEST/: Makefile  main.cpp  myApp
lexer_test/: lexer_test.cpp
performance_tests/: main.pro  perf.cpp
save_test/: main.pro  output.txt  save.cpp
source/: environment.cpp  environment.cppm  evaluator.cpp  evaluator.cppm  execute.cpp  execute.cppm  helpers.cpp  helpers.cppm  lexer.cpp  lexer.cppm  main.cpp  node.cpp  node.cppm  object.cpp  object.cppm  parser.cpp  parser.cppm  pch.h  print.cpp  print.cppm  structs.cppm  test_reader.cpp  test_reader.cppm  test_reader.h  token.cppm
source/Allocators/: allocator_aliases.h  allocator_string.h  allocators.h
tests/: create_table.test
tests/Assert/: 1-basic.test  3-should_error.test
tests/Basic/: 3-select_from.test  4-minus.test
tests/Behemoth/: 1-behemoth.test
tests/Count/: 1.count(*).test
tests/Decimals/: 2-double.test  3-dot.test
tests/Default_Value_Tests/: 5-default_value_insert2.test
tests/Expressions/: 2-subtraction.test  4-division.test  6-parenthesis.test  7-add_strings.test
tests/Function/: 1-category.test
tests/InvalidInserts/: 1-string_in_int.test  2-big_string_in_small_string.test
tests/Misc_Tests/: 2-insert_into_table.test
tests/QuotedStrings/: 6-single_quote.test
tests/SQL_tests/Alter/: 1-alter.test
tests/SQL_tests/Assert/: 2-multi.test  4.count(*).test
tests/SQL_tests/Basic/: 5-MEMBUG.test
tests/SQL_tests/Bugs/: 1-create_table_mismatch_after_expression.test
tests/SQL_tests/Count/: 2.select(count(*)) .test
tests/SQL_tests/CreateTable/: 1-invalid_parameter.test
tests/SQL_tests/Decimals/: 1-float.test  4-decimal.test
tests/SQL_tests/DefaultValue/: 1-default_value_insert.test
tests/SQL_tests/Expressions/: 1-addition.test  3-multiplication.test  5-addition_and_multiplication.test
tests/SQL_tests/Function/: 1-create_category_func.test  2-use_category_func.test  3-where.test  4-select_func.test  5-select_func_two.test
tests/SQL_tests/LeftJoin/: 1-basic.test  2-where.test
tests/SQL_tests/QuotedStrings/: 7-double_quote.test  8-symbols_in_quotes.test  9-single_in_double.test
tests/SQL_tests/Select/: 1-asterisk.test  2-column.test
tests/SQL_tests/ShouldError/: 10-create_table_missing_semicolon.test  13-insert_into_wrong__type.test
tests/SQL_tests/TextTypes/: 15-varchar_type.test
tests/SQL_tests/Where/: 2-select_where.test  3-string_equals.test  4-none_should_pass.test  5-greater_than.test
tests/Select/: 3-two_column copy.test
tests/ShouldError/: 11-insert_into_missing_semicolon copy.test  12-select_from_missing_semicolon.test  14-insert_into_wrong__type.test
tests/TextTypes/: 16-varchar_type_bad_format.test
tests/Where/: 1-select_where.test  6-less_than.test
tests/save_test/: main.cpp
valgrind/: generate_suppressions.sh  valgrind_clean_erros.sh  valgrinde.sh
